fix(style): code should overflow with scroll now

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -109,6 +109,8 @@ li:before {
 @import "syntax";
 pre {
   background: #eee !important;
+  overflow: auto;
+  border-radius: 3px;
 }
 
 code {
